--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,9 @@
     <string name="app_name">First App</string>
     <string name="button_send">Send</string>
     <string name="edit_message">Enter a menssage</string>
+    <string name="title_activity_json">JsonActivity</string>
+    <string name="departament">Departament Name</string>
+    <string name="description">Description</string>
+    <string name="inauguration_year">Inauguration Year</string>
+    <string name="name">Name</string>
 </resources>
