--- a/app/src/main/res/values-en/strings.xml
+++ b/app/src/main/res/values-en/strings.xml
@@ -10,4 +10,6 @@
     <string name="name">Name</string>
     <string name="go_to_fragments">Go To Fragments</string>
     <string name="show_json">Show Json</string>
+    <string name="android_components">Android Componentes</string>
+    <string name="lists">Lists/RecycleView</string>
 </resources>
